# VACVPlaques-dataset-tools

./: .gitignore  README.md  personal_notes.md  pyproject.toml
attachments/: batch_first_channel.ijm  trackmate_configs.txt
notebooks/: 0_read_spots_from_trackmate.ipynb  1_create_trackmate_spots_dataset.ipynb  2_plaque_u2tou1_and_statistics.ipynb  3_motility_analysis_from_trackmate_results.ipynb  4_direction_deviation_angle_from_trackmate.ipynb  5_Infected_counting_from_trackmate_results.ipynb  6_create_reference_metrics_csv_for_infectio.ipynb
